# VfsBoot

./: .gitignore  .vfshrc  ACCOUNTS.json  AGENTS.md  CLAUDE.md  CMakeLists.txt  FINAL_IMPLEMENTATION_SUMMARY.md  HOWTO_SCRIPTS.md  LICENSE  MODULAR_STRUCTURE.md  MODULE_REFERENCE.md  Makefile  PROJECT_MANAGER.md  QWEN.md  QWEN_BUGFIXES_20251023_2.md  QWEN_BUGFIX_SUMMARY.md  QWEN_STRUCTURED_PROTOCOL.md  QWEN_TCP_MODE_IMPLEMENTATION.md  README.md  REFACTORING_GUIDE.md  TASKS.md  TEST_RESULTS.md  UPP_CONVENTION.md  UPP_CONVERSION_STATUS.md  UPP_STARTUP_COMMANDS_SUMMARY.md  VfsShell  base.vfs  build.sh  build_tests_managermode.sh  cloud-migration-plan.vfs  codex-make  codex.json  debug_test.cx  debug_unescape  debug_unescape.cpp  demo_builtin  demo_ncurses  demo_text_editor.cpp  demo_ui_abstraction.cpp  editor_functions.cpp  (+44 more)
.vfsh/: #.2025-10-08-114845.bak  cloud-migration-plan.vfs.2025-10-08-225524.bak  hello-world-plan.vfs.2025-10-08-230756.bak  microservices-plan.vfs.2025-10-09-084451.bak  plan.vfs.2025-10-08-114827.bak  plan.vfs.2025-10-08-114845.bak  plan.vfs.2025-10-08-115753.bak  plan.vfs.2025-10-08-120606.bak  plan.vfs.2025-10-08-121243.bak  plan.vfs.2025-10-09-084515.bak
Stage1/: Stage1.upp  codex.cpp  codex.h  snippet_catalog.cpp
Stage1/snippets/: ai-bridge-hello.txt
VfsShell/: AGENTS.md  Stage1.upp  VfsShell.h  VfsShell.upp  ai_bridge.h  build_graph.cpp  build_graph.h  clang_parser.cpp  clang_parser.h  cmd_qwen.cpp  cmd_qwen.h  codex.cpp  codex.cpp.backup  codex.cpp.bak  codex.h  codex.h.backup  command.cpp  command.h  cpp_ast.h  editor_functions.h  hypothesis.cpp  main.cpp  make.cpp  make.h  qwen_client.cpp  qwen_client.h  qwen_client_test.cpp  qwen_echo_server.cpp  qwen_integration_test.cpp  qwen_manager.cpp  qwen_manager.h  qwen_protocol.cpp  qwen_protocol.h  qwen_protocol_test.cpp  qwen_state_manager.cpp  qwen_state_manager.h  qwen_state_manager_test.cpp  qwen_tcp_server.cpp  registry.cpp  sexp.h  (+22 more)
VfsShell/snippets/: tools-list.txt
assembly/: README.md  ast-roundtrip-copy.cxpkg  ast-roundtrip.cxpkg
docs/: ACTION_PLANNER.md  BITVECTOR_TAGSET.md  COMMIT_REVIEW_FINDINGS.md  DEPENDENCY_GRAPH.txt  FEEDBACK_PIPELINE.md  README.md  REMOTE_VFS.md  SCENARIO_HARNESS.md  SCOPE_STORE.md  VFSBOOT_USER_MANUAL.md
docs/architecture/: CODE_SPLIT_PLAN.md  UI_BACKEND_IMPLEMENTATION_SUMMARY.md  UI_IMPLEMENTATION_STATUS.md
docs/archive/: CLEANUP_SUMMARY.md  DISCUSSION.md  TASK_CONTEXT.md  TEST_RESULTS.md
docs/howto/: HOWTO_SCRIPTS.md
docs/reference/: ACCOUNTS_JSON_SPEC.md  MANAGER_PROTOCOL.md  QWEN_CLIENT_IMPLEMENTATION.md  QWEN_DOCS_AUDIT.md  QWEN_LOGGING_GUIDE.md  QWEN_MANAGER_MODE.md  QWEN_MANAGER_TUTORIAL.md  README_UI_BACKEND.md  TASK_MANAGER.md  UPP_CONVENTION.md  UPP_ENV_IMPLEMENTATION_SUMMARY.md  VFSBOOT.md  internal_umk_plan.md  qwen-code-fork-enhancements.md
harness/: README.md  demo.cpp  runner.cpp  runner.h  scenario.cpp  scenario.h  train.cpp
scenarios/basic/: hello-world.scenario  multi-dir-creation.scenario  simple-file-creation.scenario
scripts/: account_client.sh
scripts/examples/: action-planner-demo.cx  ai-hello-world.sexp  ai-interactive-demo.cx  bitvector-tagset-demo.cx  feedback-pipeline-demo.cx  full-integration-hello-world.cx  hello-world.cx  hypothesis-demo-simple.cx  hypothesis-testing-demo.cx  libclang-codegen-demo.cx  logic-complete-tagset-demo.cx  logic-debugging-session.cx  logic-plan-validation.cx  logic-rules-advanced-demo.cx  logic-rules-dynamic-creation-demo.cx  logic-rules-from-scratch-demo.cx  logic-rules-persistence-demo.cx  logic-rules-simple-demo.cx  logic-system-demo.cx  make-demo.cx  manager-mode-demo.cx  mount-demo.cx  overlay-demo.cx  plan-basic.cx  plan-navigation.cx  plan-sexp-demo.sexp  plan-workflow.cx  plan.vfs  planner-logic-advanced-demo.cx  planner-logic-expert-demo.cx  planner-logic-integration-demo.cx  planning-loop-demo.cx  qwen-demo.cx  qwen-session-demo.cx  remote-copy-demo.cx  remote-mount-demo.cx  sample.overlay  tree-viz-context-demo.cx  upp-assembly-demo.cx  web-server-demo.cx
scripts/reference/: command-tour.cx  plan-commands.md  upp-assembly.cx  upp-assembly.md  upp-host-loading.cx
scripts/tutorial/: getting-started.cx  planner-tutorial.md  upp-basics.cx
scripts/unittst/: ai-alias-test.cx  ai-single-command-test.cx  core.cx  cpp-escape.cx  integration-hello-world.cx  upp_internal_umk.md
scripts/utility/: rename_sources.sh  run_qwen_tests.sh
src/Clang/: Clang.h  Clang.upp  ClangParser.cpp  ClangParser.h  CppAst.cpp  CppAst.h
src/Explorer/: Explorer.upp
src/Logic/: Logic.h  Logic.upp  LogicEngine.cpp  LogicEngine.h  TagSystem.cpp  TagSystem.h
src/Qwen/: CmdQwen.cpp  CmdQwen.h  Qwen.h  Qwen.upp  QwenClient.cpp  QwenClient.h  QwenClientTest.cpp  QwenEchoServer.cpp  QwenIntegrationTest.cpp  QwenLogger.h  QwenManager.cpp  QwenProtocol.cpp  QwenProtocol.h  QwenProtocolTest.cpp  QwenStateManager.cpp  QwenStateManager.h  QwenStateManagerTest.cpp  QwenTcpServer.cpp  QwenTcpServer.h  QwenVersion.h  registry.cpp  registry.h
src/UppCompat/: BuildGraph.h  Umk.cpp  Umk.h  UppAssembly.cpp  UppAssembly.h  UppBuilder.cpp  UppBuilder.h  UppCompat.h  UppCompat.upp  UppToolchain.cpp  UppToolchain.h  UppWorkspaceBuild.cpp  UppWorkspaceBuild.h  build_graph.h  ui_backend.h  upp_workspace_build.h
src/VfsCore/: VfsCommon.cpp  VfsCommon.h  VfsCore.cpp  (+4 more)
test_package/: test_package.upp
test_src/: test.var  test_app.var  test_editor.py  test_editor_functions.cpp  test_editor_improved.py  test_esc.cpp  test_esc_fix.cpp  test_file.var  test_libclang.cpp  test_registry.cpp  test_unescape.cpp
tests/: 001-hello-world.sexp  002-auto-deduction.sexp  003-string-view.sexp  004-lambda-capture.sexp  005-structured-bindings.sexp  006-if-constexpr.sexp  007-fold-expression.sexp  008-optional.sexp  009-variant.sexp  010-filesystem.sexp  011-ai-bridge-hello.sexp  012-integration-hello-world.sexp  013-ai-alias-test.sexp  020-planner-basic.sexp  100-qwen-protocol-parse.sexp  manager_mode_test.cpp  test-compile-simple.sexp  test_lib.c  test_mount.sexp
tools/: perform_split.sh  split_codex.py  split_modules.py  test_harness.py
(+79 files in other folders)
